--- a/.ftpconfig
+++ b/.ftpconfig
@@ -1,11 +1,11 @@
 {
   "protocol":"sftp",
-  "host":"192.168.1.99",
+  "host":"192.168.1.149",
   "port":22,
   "user":"root",
   "pass":"1234",
   "promptForPass":"false",
-  "remote":"/work",
+  "remote":"/allnew",
   "local":"",
   "agent":"",
   "privatekey":"",
