--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ mongodb/*.json
 mongodb/**/*.json
 mongodb/**/*.mp4
 mongodb/backup
+
+## oracle
+oracle/node/dbConfig.js
+oracle/node_modules
+oracle/node/package-lock.json
