--- a/node/mysql-sync/package.json
+++ b/node/mysql-sync/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "atlas",
+  "name": "mysql-sync",
   "version": "1.0.0",
   "description": "",
-  "main": "atlas.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "sync-mysql": "^3.0.1"
   }
 }
