--- a/node/mysql/package.json
+++ b/node/mysql/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "atlas",
+  "name": "mysql",
   "version": "1.0.0",
-  "description": "",
-  "main": "atlas.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.5",
-    "dotenv": "^16.0.3"
-  }
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1"
+  },
+  "description": ""
 }
