--- a/node/mongodb/package.json
+++ b/node/mongodb/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mysql-sync",
+  "name": "mongodb",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "mongodb.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "sync-mysql": "^3.0.1"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "mongodb": "^4.2.2",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "description": ""
