--- a/node/mongoose/package.json
+++ b/node/mongoose/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysql-sync",
+  "name": "mongoose",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "sync-mysql": "^3.0.1"
+    "async": "^3.2.4",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "mongoose": "^6.1.5",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   },
-  "devDependencies": {},
   "description": ""
 }
