--- a/node/mysql2/package.json
+++ b/node/mysql2/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mysql-sync",
+  "name": "mysql2",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "mysql2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "sync-mysql": "^3.0.1"
+    "mysql2": "^3.2.3"
   },
   "devDependencies": {},
   "description": ""
