--- a/node/project_changul/package.json
+++ b/node/project_changul/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "auth",
+  "name": "mongoose",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,13 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.4",
     "body-parser": "^1.20.2",
-    "circular-json": "^0.5.9",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
-    "request": "^2.88.2",
+    "path": "^0.12.7",
     "sync-mysql": "^3.0.1"
-  }
+  },
+  "description": ""
 }
