--- a/node/project_mongoose/package.json
+++ b/node/project_mongoose/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysql2-web",
+  "name": "project_mongoose",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.4",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "mongoose": "^7.0.5",
     "morgan": "^1.10.0",
-    "mysql2": "^3.2.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sync-mysql": "^3.0.1"
   }
 }
