--- a/node/requests/package.json
+++ b/node/requests/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "mongoose",
+  "name": "requests",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,13 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^3.2.4",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
+    "circular-json": "^0.5.9",
     "express": "^4.18.2",
-    "mongoose": "^6.1.5",
-    "morgan": "^1.10.0",
-    "path": "^0.12.7"
-  },
-  "description": ""
+    "request": "^2.88.2"
+  }
 }
