--- a/node/zzproject/package.json
+++ b/node/zzproject/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "mongoose",
+  "name": "zzproject",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,15 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^3.2.4",
     "body-parser": "^1.20.2",
+    "circular-json": "^0.5.9",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.1.5",
+    "mongoose": "^6.10.5",
     "morgan": "^1.10.0",
-    "path": "^0.12.7",
+    "request": "^2.88.2",
     "sync-mysql": "^3.0.1"
-  },
-  "description": ""
+  }
 }
